--- a/src/styles/reduxDemo/reduxDemo.module.css
+++ b/src/styles/reduxDemo/reduxDemo.module.css
@@ -3,9 +3,9 @@
   justify-content: center;
   align-items: center;
   width: 100vw;
-  height: 100vh;
-  border-radius: 25px;
-  background-color: #f9fbe7;
+  height: calc(100vh - 60px);
+  background-color: #f0f4c3;
+  gap: 12px;
 }
 
 .containerInner {
@@ -22,7 +22,11 @@
 .containerInner button {
   font-size: 32px;
   padding: 0.5rem 1rem;
-  border-radius: 25%;
+  border-radius: 30px;
   border: none;
   background-color: #afb42b;
+}
+
+.containerInner button:hover {
+  background-color: #9e9d24;
 }
